Add: Exit button logic

--- a/TODO
+++ b/TODO
@@ -1,12 +1,13 @@
 Todo:
-  ☐ PEN
-  [] Numeros abajo a la derecha con renglon y columna
-  [] Spray
-  [] Square
-  [] Eraser
-  ✔ Choose colors @done(20-12-11 22:30)
-  [] Exit Button @started(20-12-11 19:56)
-  [] Color picker
+  Tools:
+    [] PEN
+    [] Spray
+    [] Square
+    [] Eraser
+    [] Color picker
+  ✔ Numeros con posicion X y Y @done(20-12-11 22:48)
+  ✔ Choose colors @done(20-12-11 22:30) @lasted(2h51m16s)
+  ✔ Exit Button @started(20-12-11 19:56) @done(20-12-11 22:47) @lasted(5min)
   ✔ Only paint in drawing area @done(20-12-10 22:20)
   [] Corregir col y ren
 
