Add: Draw square

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@ Todo:
   Tools:
     ✔ PEN @done(20-12-11 23:15)
     ✔ Spray @started(20-12-11 23:47) @done(20-12-12 00:12) @lasted(25m9s)
-    [] Square
+    ✔ Square @started(20-12-12 16:40) @done(20-12-12 17:12) @lasted(32m26s)
     ✔ Eraser @started(20-12-11 22:50) @done(20-12-11 23:13) @lasted(23m47s)
     ✔ Fix: Color stays white after eraser @done(20-12-11 23:13)
     [] Maybe change shape
