--- a/TODO
+++ b/TODO
@@ -5,11 +5,10 @@ Todo:
     ✔ Square @started(20-12-12 16:40) @done(20-12-12 17:12) @lasted(32m26s)
     ✔ Eraser @started(20-12-11 22:50) @done(20-12-11 23:13) @lasted(23m47s)
     ✔ Fix: Color stays white after eraser @done(20-12-11 23:13)
-    [] Maybe change shape
     [] Color picker 
+    ✔ Brush @started(20-12-12 20:37) @done(20-12-12 21:03) @lasted(26m31s)
   ✔ Numeros con posicion X y Y @done(20-12-11 22:48)
   ✔ Choose colors @done(20-12-11 22:30) @lasted(2h51m16s)
   ✔ Exit Button @started(20-12-11 19:56) @done(20-12-11 22:47) @lasted(5min)
   ✔ Only paint in drawing area @done(20-12-10 22:20)
-  [] Corregir col y ren
-  [] fix Overflow
+  [] Current color
