Add: Show current color

--- a/TODO
+++ b/TODO
@@ -11,4 +11,4 @@ Todo:
   ✔ Choose colors @done(20-12-11 22:30) @lasted(2h51m16s)
   ✔ Exit Button @started(20-12-11 19:56) @done(20-12-11 22:47) @lasted(5min)
   ✔ Only paint in drawing area @done(20-12-10 22:20)
-  [] Current color
+  ✔ Current color @started(20-12-12 21:13) @done(20-12-12 22:02) @lasted(49m44s)
